<resources>
    <string name="PC_PREFIX">电脑_</string>
    <string name="aboout_app_version_text">"当前版本  %s"</string>
    <string name="about_me_capacity_title">容量：</string>
    <string name="about_title_text">关于我们</string>
    <string name="about_user_id">"用户唯一标示码
%s"</string>
    <string name="about_vip_item">我的会员</string>
    <string name="about_wallet_item">我的钱包</string>
    <string name="account_error_toast">百度云未登录，请登录后重试</string>
    <string name="account_expire_text">帐户已过期，请重新登录</string>
    <string name="account_expire_title">帐户已过期</string>
    <string name="account_name">百度帐号：%s</string>
    <string name="account_not_activate">帐号未激活，请查收验证邮件</string>
    <string name="activate_register_code">激活</string>
    <string name="add_device_title">关联设备</string>
    <string name="add_download_task_dialog_bt_file_content">检测到链接为BT种子文件，是否直接打开并离线下载？(下载过程不消耗流量)</string>
    <string name="add_download_task_dialog_bt_file_title">检测到种子文件</string>
    <string name="add_download_task_dialog_content">默认保存至：/全部文件/我的资源</string>
    <string name="add_download_task_dialog_ok">免流量保存到云</string>
    <string name="add_download_task_dialog_title">百度云帮你离线下载</string>
    <string name="add_email">输入地址(使用回车来分割地址)</string>
    <string name="add_file">添加</string>
    <string name="add_follow">添加好友</string>
    <string name="add_follow_button">添加好友</string>
    <string name="add_follow_failed">添加好友失败</string>
    <string name="add_follow_input_vcode_desc">你今天添加的好友已达100人上限，添加更多需验证。</string>
    <string name="add_follow_refuse">已拒绝你的请求</string>
    <string name="add_follow_success">添加成功</string>
    <string name="add_follow_tips">对方不是你的好友~</string>
    <string name="add_follow_title">添加好友</string>
    <string name="add_friend">添加好友</string>
    <string name="add_friends_button_text">加为好友</string>
    <string name="add_group_member_failed">添加群成员失败</string>
    <string name="add_number">输入号码(使用回车来分割号码)</string>
    <string name="add_one_repeat_recipients">\"%1$s\"被重复添加</string>
    <string name="add_path_button">添加要备份的文件夹</string>
    <string name="add_remark_name">添加备注</string>
    <string name="add_resource_site">添加站点</string>
    <string name="add_some_repeat_recipients">%1$s位联系人被重复添加</string>
    <string name="add_to_blacklist">加入黑名单</string>
    <string name="add_to_blacklist_failed">加入黑名单失败</string>
    <string name="add_to_blacklist_succeed">已将%s加入黑名单</string>
    <string name="addding_follow">添加中…</string>
    <string name="added_already">(已添加)</string>
    <string name="added_in_download_list">正在为你加密传输</string>
    <string name="adding_follow">添加好友中…</string>
    <string name="adding_group_member">正在添加群成员…</string>
    <string name="adding_to_blacklist">正在加入黑名单…</string>
    <string name="addto_blacklist_dialog_msg">加入黑名单将收不到TA的消息</string>
    <string name="advertise_share_failed">没有安装此应用</string>
    <string name="advertise_share_info">分享到</string>
    <string name="agree_link">用户服务协议</string>
    <string name="agree_tip">点击注册表示已阅读并同意</string>
    <string name="album_auto_sync_dialog_title">相册自动备份(仅WiFi)</string>
    <string name="album_auto_sync_good_time">随时随地收藏你的美好时光</string>
    <string name="album_backup">相册备份</string>
    <string name="album_backup_baidu_album_running">百度相册正在为你备份…</string>
    <string name="album_backup_dialog_flow_tips">随时随地收藏你的美好时光</string>
    <string name="album_backup_dialog_temporarily_enable">暂不启用</string>
    <string name="album_backup_item_check_title">查看已备份的相册</string>
    <string name="album_backup_item_check_title_open">立即开启图片自动备份(仅WiFi)</string>
    <string name="album_backup_item_set_title">相册备份设置</string>
    <string name="album_backup_no_sd_card">SD卡不存在</string>
    <string name="album_backup_nothing">没有已备份的照片和视频哦~</string>
    <string name="album_backup_prompt_automatic">自动备份，再也不怕丢失照片</string>
    <string name="album_backup_prompt_drive_full">百度云空间不足，清理或扩容空间后再试</string>
    <string name="album_backup_prompt_low_power">备份暂停，电量20%以上后重试</string>
    <string name="album_backup_prompt_unsend_account">剩余：%s个</string>
    <string name="album_backup_quick_settings_info">即拍即传，收藏你的美好时光</string>
    <string name="album_backup_quick_settings_title">照片自动备份(仅WiFi)</string>
    <string name="album_backup_wifi_backup">自动仅在WiFi下进行操作，不耗费流量</string>
    <string name="album_detail_preview">预览</string>
    <string name="album_detail_select_operation">请选择操作</string>
    <string name="album_is_query">正在查找待备份的文件…</string>
    <string name="album_manage">电脑登录 yun.baidu.com 管理照片更方便</string>
    <string name="album_operation_open">打开</string>
    <string name="album_path_alert_msg">如果你开启了相册自动备份，此文件夹内容可能会重复备份，是否选择？</string>
    <string name="album_select_album_folder">选择自动备份的相册</string>
    <string name="album_sync_title">相册自动备份</string>
    <string name="album_tv_loowerpower">备份暂停，电量20%以上后继续备份</string>
    <string name="alert_title">提示</string>
    <string name="all_inzip_files_size_too_large">暂不支持大于50M的文件下载</string>
    <string name="all_pause_upload">全部暂停</string>
    <string name="all_redownload">全部重新下载</string>
    <string name="all_reupload">全部重新上传</string>
    <string name="all_start_pause_upload">全部继续</string>
    <string name="alread_selected_album">已选(%d)相册，确定</string>
    <string name="already_added_tools">已添加的工具</string>
    <string name="already_cancel">已取消</string>
    <string name="already_clear_all">已清空</string>
    <string name="already_has_downloaded">已下载过此文件</string>
    <string name="already_in_download_list">已在下载列表中，请耐心等待</string>
    <string name="already_lastet_version">你的百度云已是最新版本</string>
    <string name="already_original_pic">已经是原图了</string>
    <string name="anonymous_filelist_tips_content">登录后，尽享2T超大空间</string>
    <string name="anonymous_nickname">请登录</string>
    <string name="anonymous_share_list_tips_content">与好友分享百度云文件需要登录哦！</string>
    <string name="anonymous_transferlist_tips">登录后才能查看并分享文件哦</string>
    <string name="apk_download_failed">升级失败</string>
    <string name="apk_version_info">百度云%s版本</string>
    <string name="app_check_title">您正在使用非官方版本的</string>
    <string name="app_download_url">为了保证您的安全，请前往http://pan.baidu.com下载官方版本</string>
    <string name="app_name">百度云</string>
    <string name="app_name_p2pshare">  闪电互传  </string>
    <string name="app_name_with_space">  百度云  </string>
    <string name="application_not_available">没有找到可用的程序</string>
    <string name="authenticator_change_account_button">切换帐号</string>
    <string name="authenticator_error">帐号异常，登录失败</string>
    <string name="authenticator_ok">确认</string>
    <string name="authenticator_tip_login">百度云已登录，请选择需要用户备份的帐号：</string>
    <string name="authenticator_tip_not_login">你将使用此百度云帐号进行个人资料备份，请牢记</string>
    <string name="authenticator_title">百度云备份</string>
    <string name="auto_scan_local_bt">自动扫描本地种子文件</string>
    <string name="back">返回</string>
    <string name="backup_complete">相册备份完成</string>
    <string name="backup_complete_tips">已完成，没有要备份的文件了</string>
    <string name="backup_file_name">backup_%s</string>
    <string name="backup_index_file_name" formatted="false">backup(%d)_ %s</string>
    <string name="backup_label_not_yet_upload">未上传(%1$s)</string>
    <string name="backup_path_setting_title">自动备份的文件夹</string>
    <string name="bacup_file_manage">电脑登录 yun.baidu.com 管理文件更方便</string>
    <string name="baidu_account">百度帐号：</string>
    <string name="baidu_album">百度相册</string>
    <string name="baidu_yun_no_storage">百度云空间不足</string>
    <string name="baiduyun_no_storage">百度云空间不足，无法保存 清理空间后再试吧</string>
    <string name="batchtransfer_files_overflow">保存文件已超100个，请重新选择</string>
    <string name="batchtransfer_not_save_files_myself">不能保存自己的分享</string>
    <string name="batchtransfer_status_dir_not_exist">目标文件夹不存在</string>
    <string name="batchtransfer_status_failed">保存失败</string>
    <string name="batchtransfer_status_file_exist">文件已存在</string>
    <string name="batchtransfer_status_get_failed">保存进度获取失败：</string>
    <string name="batchtransfer_status_reload">重新加载保存进度</string>
    <string name="cancel">取消</string>
    <string name="check_version_text">检查新版本</string>
    <string name="cloudp2p_cancel_uploading_confirm">取消分享</string>
    <string name="cloudp2p_share_ignore_failed">忽略并分享</string>
    <string name="cloudp2p_upload_faled_info">有%d个文件上传失败，请选择：</string>
    <string name="follow_list_tab_share_group_setting_title">邀请朋友加入群聊</string>
    <string name="group_conversation_loading">正在载入…</string>
    <string name="group_conversation_setting_clean_msg">清空消息记录</string>
    <string name="group_conversation_setting_count">群人数上限</string>
    <string name="group_conversation_setting_modify_group_name_card">我在本群的昵称</string>
    <string name="group_conversation_setting_name">群组名称</string>
    <string name="group_conversation_setting_notification">消息通知</string>
    <string name="group_conversation_setting_quit_group">删除并退出群组</string>
    <string name="group_conversation_setting_save">保存到好友列表</string>
    <string name="group_conversation_setting_sharefiles">查看我分享的文件</string>
    <string name="group_conversation_setting_show_members_name">显示群成员昵称</string>
    <string name="how_to_keep_pc_online">为何无法在列表中看到关联的电脑？</string>
    <string name="how_to_keep_pc_online_des">列表仅展示在线设备，请确保：</string>
    <string name="how_to_keep_pc_online_des_first">■ 电脑开机并连网</string>
    <string name="how_to_keep_pc_online_des_second">■ 笔记本电脑没有闭合</string>
    <string name="how_to_keep_pc_online_des_third">■ 云管家的“设置>传输”中，“远程推送”被勾选</string>
    <string name="how_to_relate_pc">如何关联电脑？</string>
    <string name="how_to_relate_pc_des">当前帐号登录云管家4.6及以上版本，即可自动关联</string>
    <string name="message_setting">新消息提醒</string>
    <string name="numeric_keyboard_keycode_eight">8</string>
    <string name="numeric_keyboard_keycode_five">5</string>
    <string name="numeric_keyboard_keycode_four">4</string>
    <string name="numeric_keyboard_keycode_nine">9</string>
    <string name="numeric_keyboard_keycode_one">1</string>
    <string name="numeric_keyboard_keycode_seven">7</string>
    <string name="numeric_keyboard_keycode_six">6</string>
    <string name="numeric_keyboard_keycode_three">3</string>
    <string name="numeric_keyboard_keycode_two">2</string>
    <string name="numeric_keyboard_keycode_zero">0</string>
    <string name="privacy_setting">隐私设置</string>
    <string name="quick_action_delete">删除</string>
    <string name="quick_action_download">下载</string>
    <string name="quick_action_more">更多</string>
    <string name="quick_action_push">推送到设备</string>
    <string name="quick_action_rename">重命名</string>
    <string name="quick_action_share">分享</string>
    <string name="retry">重试</string>
    <string name="revert_default_sms_app_right_now">立即恢复权限</string>
    <string name="revert_default_sms_app_right_now_lab">如需正常使用短信功能，请恢复默认的短信应用权限</string>
    <string name="settings_ablout_netdisk">关于</string>
    <string name="settings_advanced">高级设置</string>
    <string name="settings_download_default_dir">默认下载位置</string>
    <string name="settings_p2p_share">闪电互传设置</string>
    <string name="smsmms_auto_backup_title">短信自动备份(仅WiFi)</string>
    <string name="smsmms_backup_start">备份到云端</string>
    <string name="smsmms_backup_welcom_text">加密保护重要信息，留住美好记忆</string>
    <string name="smsmms_record_bottom_link_title">电脑登录 yun.baidu.com 管理短信数据</string>
    <string name="smsmms_record_title">历史记录</string>
    <string name="smsmms_restore_start_button">恢复到本机</string>
    <string name="sync_count_default_value">- -</string>
    <string name="sync_smsmms_cloud_count_lab">云端：</string>
    <string name="sync_smsmms_local_count_lab">本机：</string>
    <string name="tab_about_me">关于我</string>
    <string name="tab_discovery">发现</string>
    <string name="tab_filelist">网盘</string>
    <string name="tab_share">分享</string>
    <string name="tag_action_delete">删除</string>
    <string name="tag_action_move">移动</string>
    <string name="tag_action_rename">重命名</string>
    <string name="tag_action_save">保存到百度云</string>
    <string name="upload_download_upon_wifi">仅WiFi环境上传/下载</string>
</resources>