<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/activity_view_bg" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:netdisk="http://schemas.android.com/apk/res/com.baidu.netdisk">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:gravity="center" android:background="@color/light_gray" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="45.0dip">
            <com.baidu.netdisk.cloudp2p.ui.NoScrollGirdView android:id="@id/group_grid" android:paddingTop="15.0dip" android:paddingBottom="15.0dip" android:scrollbars="vertical" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:listSelector="@android:color/transparent" android:drawSelectorOnTop="true" android:cacheColorHint="@android:color/transparent" android:verticalSpacing="11.0dip" android:stretchMode="spacingWidthUniform" android:columnWidth="@dimen/photo_gridview_item_width" android:numColumns="auto_fit" android:fastScrollEnabled="true" />
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/empty_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <com.baidu.netdisk.ui.widget.RotateImageView android:layout_gravity="center" android:id="@id/empty_image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="8.0dip" android:src="@drawable/loading_circle" />
                <TextView android:layout_gravity="center" android:id="@id/empty_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/group_conversation_loading" style="@style/NetDisk.TextAppearance.Middle.Gray" />
            </LinearLayout>
        </RelativeLayout>
        <com.baidu.netdisk.ui.widget.SettingsItemView android:id="@id/group_name" android:clickable="false" netdisk:item_title="@string/group_conversation_setting_name" netdisk:show_guide_arrow="false" style="@style/NetDisk.SettingItem.Middle" />
        <com.baidu.netdisk.ui.widget.SettingsItemView android:id="@id/group_people_limit" android:clickable="false" netdisk:item_title="@string/group_conversation_setting_count" netdisk:show_guide_arrow="false" style="@style/NetDisk.SettingItem.Middle" />
        <com.baidu.netdisk.ui.widget.SettingsItemView android:id="@id/copy_dlink" netdisk:item_title="@string/follow_list_tab_share_group_setting_title" netdisk:show_guide_arrow="true" netdisk:outer_click_event="true" style="@style/NetDisk.SettingItem.Bottom" />
        <com.baidu.netdisk.ui.widget.SettingsItemView android:id="@id/my_share_files" netdisk:item_title="@string/group_conversation_setting_sharefiles" netdisk:outer_click_event="true" style="@style/NetDisk.SettingItem.Top" />
        <com.baidu.netdisk.ui.widget.SettingsItemView android:id="@id/notifition_checkbox" netdisk:item_title="@string/group_conversation_setting_notification" netdisk:show_checkbox="true" style="@style/NetDisk.SettingItem.Middle" />
        <com.baidu.netdisk.ui.widget.SettingsItemView android:id="@id/save_group_checkbox" netdisk:item_title="@string/group_conversation_setting_save" netdisk:show_checkbox="true" style="@style/NetDisk.SettingItem.Bottom" />
        <com.baidu.netdisk.ui.widget.SettingsItemView android:id="@id/modify_group_name_card" netdisk:item_title="@string/group_conversation_setting_modify_group_name_card" netdisk:show_guide_arrow="true" style="@style/NetDisk.SettingItem.Top" />
        <com.baidu.netdisk.ui.widget.SettingsItemView android:id="@id/show_members_name_checkbox" netdisk:item_title="@string/group_conversation_setting_show_members_name" netdisk:show_checkbox="true" style="@style/NetDisk.SettingItem.Bottom" />
        <com.baidu.netdisk.ui.widget.SettingsItemView android:id="@id/clean_msg" netdisk:item_title="@string/group_conversation_setting_clean_msg" netdisk:show_guide_arrow="false" netdisk:outer_click_event="true" style="@style/NetDisk.SettingItem.Single" />
        <Button android:id="@id/button_quit_group" android:background="@drawable/button_red_flat_selector" android:padding="13.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="21.0dip" android:layout_marginTop="17.0dip" android:layout_marginRight="21.0dip" android:layout_marginBottom="17.0dip" android:text="@string/group_conversation_setting_quit_group" style="@style/NetDisk.TextAppearance.Middle.White" />
    </LinearLayout>
</ScrollView>