<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/activity_view_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:netdisk="http://schemas.android.com/apk/res/com.baidu.netdisk">
    <include layout="@layout/my_netdisk_app_title" />
    <ScrollView android:scrollbars="none" android:layout_width="wrap_content" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:paddingTop="4.5dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.baidu.netdisk.ui.widget.SettingsItemView android:id="@id/auto_backup_sms" netdisk:item_title="@string/smsmms_auto_backup_title" netdisk:show_checkbox="true" netdisk:key_checkbox="sms_backup_checked" netdisk:outer_click_event="true" style="@style/NetDisk.SettingItem.Single" />
            <LinearLayout android:orientation="vertical" android:paddingTop="13.5dip" android:paddingBottom="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/NetDisk.SettingItem.Single">
                <TextView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/smsmms_backup_welcom_text" style="@style/NetDisk.TextAppearance.Smaller.Black" />
                <LinearLayout android:layout_gravity="center_horizontal" android:id="@id/sync_smsmms_count_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.5dip">
                    <TextView android:textSize="@dimen/text_size_middle" android:textColor="@color/blue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sync_smsmms_local_count_lab" />
                    <TextView android:textSize="@dimen/text_size_huge" android:textColor="@color/blue" android:id="@id/sync_smsmms_local_count_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:maxWidth="95.0dip" android:text="@string/sync_count_default_value" android:singleLine="true" />
                    <TextView android:textSize="@dimen/text_size_middle" android:textColor="@color/blue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="11.0dip" android:text="@string/sync_smsmms_cloud_count_lab" />
                    <TextView android:textSize="@dimen/text_size_huge" android:textColor="@color/blue" android:id="@id/sync_smsmms_cloud_count_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:maxWidth="95.0dip" android:text="@string/sync_count_default_value" android:singleLine="true" />
                </LinearLayout>
                <Button android:id="@id/smsmms_backup_start_button" android:layout_marginTop="23.0dip" android:text="@string/smsmms_backup_start" android:drawableLeft="@drawable/icon_backup_to_cloud" style="@style/NetDisk.Button.BackupOperationalBlue" />
                <Button android:id="@id/smsmms_restore_start_button" android:layout_marginTop="12.0dip" android:text="@string/smsmms_restore_start_button" android:drawableLeft="@drawable/icon_recover_to_phone" style="@style/NetDisk.Button.BackupOperationalBlue" />
            </LinearLayout>
            <com.baidu.netdisk.ui.widget.SettingsItemView android:id="@id/smsmms_backup_history" netdisk:item_title="@string/smsmms_record_title" netdisk:entry_class="com.baidu.netdisk.pim.smsmms.ui.SmsmmsRecord" style="@style/NetDisk.SettingItem.Single" />
            <LinearLayout android:orientation="vertical" android:id="@id/revert_default_sms_app_right_now_layout" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/text_size_smaller" android:textColor="@color/gray" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/revert_default_sms_app_right_now_lab" />
                <TextView android:textSize="@dimen/text_size_middle" android:textColor="@color/blue" android:gravity="center_horizontal" android:paddingTop="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/revert_default_sms_app_right_now" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:gravity="center" android:background="@color/blue_black" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="center" android:layout_width="wrap_content" android:layout_height="28.0dip" android:text="@string/smsmms_record_bottom_link_title" android:drawableLeft="@drawable/album_manage" android:drawablePadding="@dimen/set_item_icon_title_padding" style="@style/NetDisk.TextAppearance.Smaller.White" />
    </LinearLayout>
</LinearLayout>